Validierung in Artikel und Artikel Resource mit Messages

--- a/shop/src/main/resources/ApplicationMessages_de.properties
+++ b/shop/src/main/resources/ApplicationMessages_de.properties
@@ -1,5 +1,6 @@
 
-artikel.notFound.id = Kein Artikel mit der ID "{0,number}" gefunden.
+artikel.notFound.bezeichnung   = Kein Artikel mit der Bezeichnung  "{0}" gefunden.
+artikel.notFound.id            = Kein Artikel mit der ID "{0,number}" gefunden.
 
 bestellung.notFound.id = Keine Bestellung mit der ID "{0,number}" gefunden.
 
