--- a/shop/src/main/resources/ApplicationMessages_en.properties
+++ b/shop/src/main/resources/ApplicationMessages_en.properties
@@ -1,5 +1,6 @@
 
-artikel.notFound.id = No article for id "{0,number}" was found.
+artikel.notFound.bezeichnung   = No article for identifier "{0}" was found.
+artikel.notFound.id            = No article for id "{0,number}" was found.
 
 bestellung.notFound.id = No order for id "{0,number}" was found.
 
