--- a/shop/src/main/resources/ApplicationMessages_en.properties
+++ b/shop/src/main/resources/ApplicationMessages_en.properties
@@ -3,6 +3,7 @@ artikel.notFound.bezeichnung   = No article for identifier "{0}" was found.
 artikel.notFound.id            = No article for id "{0,number}" was found.
 
 bestellung.notFound.id = No order for id "{0,number}" was found.
+bestellung.notFound.kunde=No order for customer with id "{0,number}" was found.
 
 kunde.deleteMitBestellung = The customer with id "{0,number}" has {1,number} order(s).
 kunde.emailExists         = The email address "{0}" already exists.
