Aufräumen von altem, Ersetzen durch neues, Kunde Validation 40% Artikel 80%, Bestellung 25%

--- a/shop/src/main/resources/ApplicationMessages_de.properties
+++ b/shop/src/main/resources/ApplicationMessages_de.properties
@@ -1,12 +1,15 @@
 
-artikel.notFound.id = Kein Artikel mit der ID "{0,number}" gefunden.
+artikel.notFound.bezeichnung = Applikation: Kein Artikel mit der Bezeichnung "{0}" gefunden.
+artikel.notFound.id          = Applikation: Kein Artikel mit der ID "{0,number}" gefunden.
 
-bestellung.notFound.id = Keine Bestellung mit der ID "{0,number}" gefunden.
-bestellung.notFound.kunde=Keine Bestellung mit dem Kunden mit der ID "{0,number}"" gefunden.
+bestellung.bestellposition.size = Applikation: Die Bestellposition muss mindestens {min} Bestellungen haben
+bestellung.notFound.id          = Applikation: Keine Bestellung mit der ID "{0,number}" gefunden.
+bestellung.notFound.kunde       = Applikation: Keine Bestellung mit dem Kunden mit der ID "{0,number}"" gefunden.
 
-kunde.deleteMitBestellung = Der Kunde mit ID "{0,number}" hat {1,number} Bestellung(en).
-kunde.emailExists         = Die Email-Adresse "{0}" existiert bereits.
-kunde.notFound.all        = Keine Kunden vorhanden.
-kunde.notFound.email      = Kein Kunde mit der Email-Adresse "{0}" gefunden.
-kunde.notFound.id         = Kein Kunde mit der ID "{0,number}" gefunden.
-kunde.notFound.nachname   = Kein Kunde mit dem Nachnamen "{0}" gefunden.
+kunde.deleteMitBestellung = Applikation: Der Kunde mit ID "{0,number}" hat {1,number} Bestellung(en).
+kunde.emailExists         = Applikation: Die Email-Adresse "{0}" existiert bereits.
+kunde.nachname.pattern    = Applikation: Der Nachname muss mit einem Gro\u00DFbuchstaben beginnen und darf nur Buchstaben erhalten. Doppelnamen sind m\u00F6glich.
+kunde.notFound.all        = Applikation: Keine Kunden vorhanden.
+kunde.notFound.email      = Applikation: Kein Kunde mit der Email-Adresse "{0}" gefunden.
+kunde.notFound.id         = Applikation: Kein Kunde mit der ID "{0,number}" gefunden.
+kunde.notFound.nachname   = Applikation: Kein Kunde mit dem Nachnamen "{0}" gefunden.
