--- a/shop/src/main/resources/ApplicationMessages_en.properties
+++ b/shop/src/main/resources/ApplicationMessages_en.properties
@@ -1,13 +1,15 @@
 
-artikel.notFound.bezeichnung   = No article for identifier "{0}" was found.
-artikel.notFound.id            = No article for id "{0,number}" was found.
+artikel.notFound.bezeichnung = Application: No article for identifier "{0}" was found.
+artikel.notFound.id          = Application: No article for id "{0,number}" was found.
 
-bestellung.notFound.id = No order for id "{0,number}" was found.
-bestellung.notFound.kunde=No order for customer with id "{0,number}" was found.
+bestellung.bestellposition.size = Application: The order item has to have at least {min} orders.
+bestellung.notFound.id          = Application: No order for id "{0,number}" was found.
+bestellung.notFound.kunde       = Application: No order for customer with id "{0,number}" was found.
 
-kunde.deleteMitBestellung = The customer with id "{0,number}" has {1,number} order(s).
-kunde.emailExists         = The email address "{0}" already exists.
-kunde.notFound.all        = There are no customers.
-kunde.notFound.email      = No customer for email "{0}" was found.
-kunde.notFound.id         = No customer for id "{0,number}" was found.
-kunde.notFound.nachname   = No customer for lastname "{0}" was found.
+kunde.deleteMitBestellung = Application: The customer with id "{0,number}" has {1,number} order(s).
+kunde.emailExists         = Application: The email address "{0}" already exists.
+kunde.nachname.pattern    = Application: The last name must start with capital letter. Double names are possible.
+kunde.notFound.all        = Application: There are no customers.
+kunde.notFound.email      = Application: No customer for email "{0}" was found.
+kunde.notFound.id         = Application: No customer for id "{0,number}" was found.
+kunde.notFound.nachname   = Application: No customer for lastname "{0}" was found.
