Validation Messages für Bestellung angepasst.

--- a/shop/src/main/resources/ValidationMessages_en.properties
+++ b/shop/src/main/resources/ValidationMessages_en.properties
@@ -5,8 +5,10 @@ artikelverwaltung.artikel.notFound.artikels    = Validation: No existing article
 artikelverwaltung.artikel.notFound.bezeichnung = Validation: No artikel with this description found.
 artikelverwaltung.artikel.notFound.id          = Validation: No article for this ID found.
 
-bestellverwaltung.bestellung.bestellposition.size = Validation: The order item has to have at least {min} orders.
-bestellverwaltung.bestellung.notFound.id          = Validation: No order for id "{0,number}" was found.
+bestellverwaltung.bestellposition.anzahl.min            = To few order items.
+bestellverwaltung.bestellung.bestellposition.size       = Validation: The order item has to have at least {min} orders.
+bestellverwaltung.bestellung.bestellpositionen.notEmpty = Orderitems can't be empty.
+bestellverwaltung.bestellung.notFound.id                = Validation: No order for id "{0,number}" was found.
 
 kundenverwaltung.adresse.ort.length        = Validation: City must have at least {min} and may only have up to {max} characters.
 kundenverwaltung.adresse.ort.notNull       = Validation: City is required.
