--- a/shop/src/main/resources/ValidationMessages_de.properties
+++ b/shop/src/main/resources/ValidationMessages_de.properties
@@ -5,10 +5,11 @@ artikelverwaltung.artikel.notFound.artikels    = Validierung: Keine Artikel vorh
 artikelverwaltung.artikel.notFound.bezeichnung = Validierung: Kein Artikel mit dieser Bezeichnung gefunden.
 artikelverwaltung.artikel.notFound.id          = Validierung: Kein Artikel mit dieser ID gefunden.
 
-bestellverwaltung.bestellposition.anzahl.min            = Zu wenig Bestellpositionen.
-bestellverwaltung.bestellung.bestellposition.size       = Validierung: Die Bestellposition muss mindestens {min} Bestellungen haben
-bestellverwaltung.bestellung.bestellpositionen.notEmpty = Bestellpositionen kann nicht leer sein.
-bestellverwaltung.bestellung.notFound.id                = Validierung: Keine Bestellung mit der ID "{0,number}" gefunden.
+bestellverwaltung.bestellposition.anzahl.min      = Zu wenig Bestellpositionen
+bestellverwaltung.bestellung.artikelIds.invalid   = Artikel ID ungueltig
+bestellverwaltung.bestellung.bestellposition.size = Validierung: Die Bestellposition muss mindestens {min} Bestellungen haben
+bestellverwaltung.bestellung.kunde.id.invalid     = ID ungueltig
+bestellverwaltung.bestellung.notFound.id          = Validierung: Keine Bestellung mit der ID "{0,number}" gefunden.
 
 kundenverwaltung.adresse.ort.length        = Validierung: Ein Ort muss mindestens {min} und darf h\u00F6chstens {max} Zeichen enthalten.
 kundenverwaltung.adresse.ort.notNull       = Validierung: Eine Ort muss angegeben sein.
