Validation Messages für Kunde angepasst

--- a/shop/src/main/resources/ValidationMessages_de.properties
+++ b/shop/src/main/resources/ValidationMessages_de.properties
@@ -22,4 +22,9 @@ kundenverwaltung.kunde.nachname.pattern    = Validierung: Bei Nachnamen ist nach
 kundenverwaltung.kunde.notFound.alleKunden = Validierung: Keine Kunden vorhanden.
 kundenverwaltung.kunde.notFound.id         = Validierung: Kein Kunde mit der ID "{0,number}" gefunden.
 kundenverwaltung.kunde.notFound.nachname   = Validierung: Kein Kunde mit dem Nachnamen "{0}" gefunden.
+kundenverwaltung.kunde.password.length     = Validierung: Das Password darf nicht mehr als {max} Zeichen enthalten.
+kundenverwaltung.kunde.rabatt.digits       = Validierung: Ein Rabatt darf maximal {fraction} Nachkommastellen enthalten.
+kundenverwaltung.kunde.rabatt.max          = Validierung: Ein Kunde darf nur maximal {value} Rabatt erhalten!
 kundenverwaltung.kunde.seit.past           = Validierung: Das Registrierungsdatum muss in der Vergangenheit liegen.
+kundenverwaltung.kunde.umsatz.digits       = Validierung: Es darf nur ein Umsatz mit maximal {integer} Stellen und {fraction} Nachkommastellen angegeben werden.
+kundenverwaltung.kunde.vorname.length      = Validierung: Ein Vorname darf h\u00F6chstens {max} Zeichen enthalten.
