--- a/shop/src/main/resources/ValidationMessages_en.properties
+++ b/shop/src/main/resources/ValidationMessages_en.properties
@@ -22,4 +22,9 @@ kundenverwaltung.kunde.nachname.pattern    = Validation: A lastname must start w
 kundenverwaltung.kunde.notFound.alleKunden = Validation: No existing clients.
 kundenverwaltung.kunde.notFound.id         = Validation: No customer for id "{0,number}" was found.
 kundenverwaltung.kunde.notFound.nachname   = Validation: No customer with lastname "{0}" was found.
+kundenverwaltung.kunde.password.length     = Validation: The password must not contain more than {max} characters.
+kundenverwaltung.kunde.rabatt.digits       = Validation: A discount may not exceed {fraction} contain decimal places.
+kundenverwaltung.kunde.rabatt.max          = Validation: A customer may only receive a maximum {value} discount!
 kundenverwaltung.kunde.seit.past           = Validation: The registration date has to be in the past.
+kundenverwaltung.kunde.umsatz.digits       = Validation: Only one turnover with a maximum of {integer} digits and {fraction} fraction are given.
+kundenverwaltung.kunde.vorname.length      = Validation: Given Name may only have up to {max} characters.
